--- a/Todo.txt
+++ b/Todo.txt
@@ -1,4 +1,7 @@
 Cbus dev guide:
 https://www.merg.org.uk/merg_wiki/lib/exe/fetch.php?media=cbus:developer_6b.pdf
 
-Enumerate all nodes - 7.2.8
+Read node parameters
+Read NVs from modules
+
+Write NVs to modules
